--- a/.travis.yml
+++ b/.travis.yml
@@ -1,17 +1,29 @@
+# .travis.yml  
 language: node_js
+
 node_js:
-  - "stable"
+  - "lts/*"
+
 cache:
   directories:
-  - node_modules
+    - "node_modules"
+
+branches:
+  only:
+  - master
+
+install:
+- npm install
+- npm run build
+
 script:
-  - npm test
-  - npm run build
+- echo "Skipping tests"
 
 deploy:
   provider: pages
-  skip_cleanup: true
-  github_token: $github_token
-  local_dir: build
+  skip-cleanup: true
+  github-token: $GITHUB_ACCESS_TOKEN  # Set in travis-ci.org dashboard, marked secure https://docs.travis-ci.com/user/deployment/pages/#Setting-the-GitHub-token
+  target-branch: gh-pages
+  local-dir: dist
   on:
     branch: master
