--- a/.gitignore
+++ b/.gitignore
@@ -189,3 +189,6 @@ $RECYCLE.BIN/
 *.lnk
 
 # End of https://www.gitignore.io/api/linux,macos,node,windows,visualstudiocode
+
+# react-script build
+build
